Setup redirect of base page to leaflet. Keep app/ --> here

--- a/phaze-space.conf
+++ b/phaze-space.conf
@@ -1,5 +1,6 @@
 WSGIScriptAlias /app "/var/www/hacksa2015/www/demo.wsgi/"
 Alias /app/static /var/www/hacksa2015/www/static/
+Alias /static /var/www/hacksa2015/www/static/
 AddType text/html .py
 <Directory "/var/www/hacksa2015/www/">
 #  AddHandler wsgi-script .wsgi
@@ -7,3 +8,12 @@ AddType text/html .py
   Order allow,deny
   Allow from all
 </Directory>
+<VirtualHost *:80>
+	ServerName phaze.space
+# Redirect JUST the root ; app should still work here
+	RedirectMatch 301 ^/$ http://kzkzkz.info/phaze_space
+</VirtualHost>
+<VirtualHost *:80>
+	ServerName hacksa.kzkzkz.info
+	RedirectMatch 301 ^/$ http://kzkzkz.info/phaze_space
+</VirtualHost>
