Point main page at weebly

--- a/phaze-space.conf
+++ b/phaze-space.conf
@@ -11,9 +11,5 @@ AddType text/html .py
 <VirtualHost *:80>
 	ServerName phaze.space
 # Redirect JUST the root ; app should still work here
-	RedirectMatch 301 ^/$ http://kzkzkz.info/phaze_space
-</VirtualHost>
-<VirtualHost *:80>
-	ServerName hacksa.kzkzkz.info
-	RedirectMatch 301 ^/$ http://kzkzkz.info/phaze_space
+	RedirectMatch 301 ^/$ http://phazespace.weebly.com/
 </VirtualHost>
